feat: Add offset option
